<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--top-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@mipmap/index_bg">

        <ImageView
            android:id="@+id/closeactivity"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/icon_login_out" />

    </LinearLayout>


    <!--body-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/username"
                style="@style/login_text_sizeandcolor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_account"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/clearusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_login_close" />

            <ImageView
                android:id="@+id/noneinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/icon_login_down" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f1f1f1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFeatureSettings=""
                android:text="@string/password"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/password"
                style="@style/login_text_sizeandcolor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/icon_show_pwd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f1f1f1" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:background="#a2e1fb"
            android:fontFamily="PingFang-SC-Medium"
            android:text="@string/loginString"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_rember_account"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/login_check_btn_drawable"
                android:button="@null"
                android:checked="true" />

            <TextView
                style="@style/login_text_sizeandcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/remberaccount" />

            <TextView
                style="@style/login_text_sizeandcolor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/login_error" />
        </LinearLayout>
    </LinearLayout>
    <!--bottom-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#fff"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/xiyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tongyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:fontFamily="SourceHanSansCN-Light"
                android:gravity="center"
                android:text="@string/xiyi"
                android:textColor="#bbbbbb"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tongyi"
                android:fontFamily="SourceHanSansCN-Light"
                android:text="@string/xiyicontnent"
                android:textColor="#999999"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignEnd="@+id/agreement"
                android:layout_alignStart="@+id/agreement"
                android:layout_below="@id/agreement"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="2dp"
                android:background="#999999"
                android:minWidth="4dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/xiyi"
            android:layout_marginBottom="12dp"
            android:fontFamily="SourceHanSansCN-Medium"
            android:gravity="center"
            android:text="零壹新科技旗下品牌"
            android:textColor="#0097f5"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>
